# conj-grad-solver

./: CMakeLists.txt  README.md
src/: main.cpp  parallel.cu  parallel.h  serial.cpp  serial.h  utils.cpp  utils.h
test/: gen-test-files.py  n_10.expected.txt  n_10.txt  n_100.expected.txt  n_100.txt  n_10k.expected.txt  n_10k.txt  n_15k.expected.txt  n_15k.txt  n_1k.expected.txt  n_1k.txt  n_200.expected.txt  n_200.txt  n_20k.expected.txt  n_20k.txt  n_25k.expected.txt  n_25k.txt  n_2k.expected.txt  n_2k.txt  n_30k.expected.txt  n_30k.txt  n_35k.expected.txt  n_35k.txt  n_40k.expected.txt  n_40k.txt  n_50.expected.txt  n_50.txt  n_500.expected.txt  n_500.txt  n_5k.expected.txt  n_5k.txt  test1.expected.txt  test1.txt  test2.expected.txt  test2.txt  test3.expected.txt  test3.txt
